ARTEMIS-2320 Fix URLEqualsHashCode errorprone warning
Avoid hash-based containers of java.net.URL--the containers rely on equals() and hashCode(), which cause java.net.URL to make blocking internet connections.
    (see https://errorprone.info/bugpattern/URLEqualsHashCode)